# PatchPilot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  MEMO.md  PRD.md  PRODUCT.md  README.md  assignment.md  docker-compose.yml  pyproject.toml
docs/brainstorms/: 2026-06-04-patchpilot-v1-real-model-repair-requirements.md  2026-06-05-patchpilot-v2-multifile-repair-requirements.md
docs/plans/: 2026-06-03-001-feat-patchpilot-xarc-repair-plan.md  2026-06-04-001-feat-patchpilot-v1-real-model-repair-plan.md  2026-06-05-001-feat-patchpilot-v2-multifile-repair-plan.md
fixtures/buggy-parser-repo/: fixture.json
fixtures/buggy-validation-repo/: fixture.json
fixtures/generic-command-repo/: check.py
fixtures/mock-store-python/: fixture.json
fixtures/multifile-calendar-window/: fixture.json
fixtures/multifile-entitlement-ledger/: fixture.json
fixtures/multifile-inventory-state/: fixture.json
fixtures/multifile-parser-validator/: fixture.json
fixtures/multifile-permissions-contract/: fixture.json
fixtures/multifile-profile-contract/: fixture.json
fixtures/multifile-reexport-drift/: fixture.json
fixtures/multifile-shipping-rules/: fixture.json
patchpilot/: __init__.py  cli.py  config.py  errors.py
scripts/: xarc-test.ps1
tests/: conftest.py  test_adapters.py  test_cli.py  test_eval_harness.py  test_exec_tools.py  test_executor.py  test_fs_tools.py  test_memory_eval_tools.py  test_model_clients.py  test_multifile_fixtures.py  test_patch_planning.py  test_registry.py  test_runtime_retry.py  test_session_tools.py  test_subagent_tools.py  test_trace_store.py
(+104 files in other folders)
