[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "patchpilot"
version = "0.1.0"
description = "Production-shaped repository automation agent for bounded repair loops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiolimiter>=1.1.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "structlog>=24.1.0",
  "tenacity>=8.2.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
patchpilot = "patchpilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["patchpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
